# Generated by Django 5.2.1 on 2025-06-28 16:44

import uuid

import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ("backend", "0001_initial"),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name="Author",
            fields=[
                ("id", models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ("first_name", models.CharField(max_length=255)),
                ("last_name", models.CharField(max_length=255)),
            ],
        ),
        migrations.CreateModel(
            name="Award",
            fields=[
                ("id", models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ("title", models.CharField(max_length=255)),
                ("url", models.URLField(blank=True, null=True)),
            ],
        ),
        migrations.CreateModel(
            name="Event",
            fields=[
                ("id", models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ("title", models.CharField(max_length=255)),
                ("domain", models.CharField(max_length=255)),
                ("date", models.DateField()),
                ("description", models.TextField()),
            ],
        ),
        migrations.CreateModel(
            name="ResearchProject",
            fields=[
                ("id", models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ("title", models.CharField(max_length=255)),
                ("start_date", models.DateField()),
                ("end_date", models.DateField(blank=True, null=True)),
                ("description", models.TextField()),
            ],
        ),
        migrations.CreateModel(
            name="Member",
            fields=[
                ("id", models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ("first_name", models.CharField(max_length=255)),
                ("last_name", models.CharField(max_length=255)),
                ("role", models.CharField(max_length=255)),
                ("email", models.EmailField(max_length=254, unique=True)),
                ("phone", models.CharField(blank=True, max_length=20, null=True)),
                ("biography", models.TextField(blank=True, null=True)),
                ("research_domain", models.CharField(blank=True, max_length=255, null=True)),
                ("image_url", models.URLField(blank=True, null=True)),
                ("github_url", models.URLField(blank=True, null=True)),
                ("linkedin_url", models.URLField(blank=True, null=True)),
                ("personal_website", models.URLField(blank=True, null=True)),
                ("user", models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, to=settings.AUTH_USER_MODEL)),
            ],
        ),
        migrations.CreateModel(
            name="EventParticipant",
            fields=[
                ("id", models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ("event", models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to="backend.event")),
                ("member", models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to="backend.member")),
            ],
        ),
        migrations.CreateModel(
            name="AwardRecipient",
            fields=[
                ("id", models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ("award", models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to="backend.award")),
                ("member", models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to="backend.member")),
            ],
        ),
        migrations.CreateModel(
            name="PublicationAuthor",
            fields=[
                ("id", models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ("author", models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to="backend.author")),
                ("publication", models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to="backend.publication")),
            ],
        ),
        migrations.CreateModel(
            name="ProjectParticipant",
            fields=[
                ("id", models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ("member", models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to="backend.member")),
                ("project", models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to="backend.researchproject")),
            ],
        ),
    ]
